package visiter;

/**
 * ClassName: Action
 * Description:
 * date: 2021/12/8 下午10:49
 *
 * @author yimingyu
 * @version 1.0
 * @since JDK 1.8
 */
public abstract class Action {
    public abstract void getVoteResult(Person person);
}
